# STAD_mccoy

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/uav_cpp/share/uav_cpp/: package.sh
install/uav_cpp/share/uav_cpp/cmake/: uav_cppConfig.cmake
install/uav_msgs/share/uav_msgs/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
install/uav_msgs/share/uav_msgs/cmake/: uav_msgsConfig.cmake
install/uav_py/lib/uav_py/: detection  environment  follow_me  stream  vision_simulation
install/uav_py/share/uav_py/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/uav_cpp/: CMakeLists.txt  package.xml
src/uav_msgs/: CMakeLists.txt
src/uav_py/: setup.py
uav/chisom_mavsdk/src/uav_cpp/: CMakeLists.txt
uav/chisom_mavsdk/src/uav_py/: package.xml  setup.cfg
uav/chisom_mavsdk/src/uav_py/uav_py/: environment.py  vision_simulation.py
