<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uav_cpp</name>
  <version>0.0.0</version>
  <description>UAV CPP Package for controlling UAV using MAVSDK</description>
  
  <!-- Maintainer details -->
  <maintainer email="tgwilliamsc@gmail.com">ThankGodChisomWilliams</maintainer>
  
  <!-- License -->
  <license>MIT</license>
  
  <!-- Build system dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 and other package dependencies -->
  <depend>rclcpp</depend> <!-- ROS 2 C++ client library -->
  <depend>std_msgs</depend> <!-- Standard message types -->
  <depend>sensor_msgs</depend> <!-- Sensor message types (if applicable) -->
  <depend>MAVSDK</depend> <!-- MAVSDK for drone control -->

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export build system type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

